# linkedin_scraper

./: README.md  connections_template.json  main.py  pyproject.toml  search_template.json
backup/: backup_working_connections.py  main copy.py
backup/utils/: auth.py  robot_handler.py  scraper.py
linkedin/: base.py
linkedin/targets/: network.py  search.py  types.py
linkedin/utils/: data_export.py
