[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Sam Louderback <sam@louderback.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
